k8s/components/private-gateway/base/resources/10-gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio-private
spec:
  controllerName: istio.io/gateway-controller
