k8s/components/private-gateway/base/resources/20-knative-private-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: knative-private
  namespace: knative-serving
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio-private
  listeners:
    - name: http
      hostname: "*.sovereignite.local"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
